--- a/index.html
+++ b/index.html
@@ -13,12 +13,21 @@
     <div id="header">
       <div class="wrapped">
         <h1>PeteFace</h1>
+        <div class="tagline">Like Facebook only with me in it.</div>
       </div>
     </div>
     
     <div class="wrapped">
       <div id="aside">
         <img src="images/avatar.jpg" alt="Pete" title="Most handsome!">
+        <div class="section">
+          <h3>Links</h3>
+          <div class="core">
+            <ul>
+              <li><a href="http://twitter.com/Aupajo">@Aupajo on Twitter</a></li>
+            </ul>
+          </div>
+        </div>
         <div class="section">
           <h3>Everyone Likes This</h3>
           <div class="core">
