--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
           <h3>Links</h3>
           <div class="core">
             <ul>
-              <li><a href="http://twitter.com/Aupajo">@Aupajo on Twitter</a></li>
+              <li><a href="http://twitter.com/Aupajo">Twitter</a></li>
+              <li><a href="http://github.com/Aupajo">GitHub</a></li>
             </ul>
           </div>
         </div>
@@ -87,6 +88,8 @@
           <dl>
             <dt>Twitter:</dt>
             <dd><a href="http://twitter.com/Aupajo">@Aupajo</a></dd>
+            <dt>GitHub:</dt>
+            <dd><a href="http://github.com/Aupajo">Aupajo</a></dd>
             <dt>Mobile:</dt>
             <dd class="tel">+64 27 308 0822</dd>
             <dt>LinkedIn:</dt>
