--- a/public/index.html
+++ b/public/index.html
@@ -130,7 +130,7 @@
               <a href="http://www.neilgaiman.com/">Neil Gaiman</a><br>
               <a href="http://www.penny-arcade.com/">Jerry Holkins</a><br>
               <a href="http://en.wikipedia.org/wiki/Terry_Pratchett">Terry Pratchett</a><br>
-              <a href="http://37signals.com/">Jason Freid</a><br>
+              <a href="http://37signals.com/">Jason Fried</a><br>
               <a href="http://www.hplovecraft.com/">H.P. Lovecraft</a><br>
               <a href="http://richarddawkins.net/">Richard Dawkins</a><br>
               <a href="http://www.paul-rand.com/">Paul Rand</a><br>
