Added Foursquare. FOOUURRRSQUUUAAAARRRE

--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
             <ul>
               <li><a href="http://twitter.com/Aupajo">Twitter</a></li>
               <li><a href="http://github.com/Aupajo">GitHub</a></li>
+              <li><a href="http://foursquare.com/user/aupajo">Foursquare</a></li>
             </ul>
           </div>
         </div>
@@ -88,6 +89,8 @@
             <dd><a href="http://twitter.com/Aupajo">@Aupajo</a></dd>
             <dt>GitHub:</dt>
             <dd><a href="http://github.com/Aupajo">Aupajo</a></dd>
+            <dt>Foursquare:</dt>
+            <dd><a href="http://foursquare.com/user/aupajo">Aupajo</a></dd>
             <dt>Mobile:</dt>
             <dd class="tel">+64 27 308 0822</dd>
             <dt>LinkedIn:</dt>
