Very much corporeal.

--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
       
           <dl>
             <dt>Birthday:</dt>
-            <dd>August 5, 1988</dd>
+            <dd>August 5, 1988 <span class="note">(not dead yet)</span></dd>
             <dt>Relationship Status:</dt>
             <dd>In a relationship with <a href="/">himself</a>.</dd>
             <dt>Looking For:</dt>
