Hitchens makes the list.

--- a/public/index.html
+++ b/public/index.html
@@ -133,11 +133,12 @@
               <a href="http://www.neilgaiman.com/">Neil Gaiman</a><br>
               <a href="http://www.penny-arcade.com/">Jerry Holkins</a><br>
               <a href="http://en.wikipedia.org/wiki/Terry_Pratchett">Terry Pratchett</a><br>
+              <a href="http://www.douglasadams.com/">Douglas Adams</a><br>
+              <a href="http://www.hitchensweb.com/">Christopher Hitchens</a><br>
               <a href="http://37signals.com/">Jason Fried</a><br>
               <a href="http://www.hplovecraft.com/">H.P. Lovecraft</a><br>
               <a href="http://richarddawkins.net/">Richard Dawkins</a><br>
-              <a href="http://www.paul-rand.com/">Paul Rand</a><br>
-              <a href="http://www.douglasadams.com/">Douglas Adams</a>
+              <a href="http://www.paul-rand.com/">Paul Rand</a>
             </dd>
           </dl>
         </div>
