Tweaks tweaks tweaks

--- a/public/index.html
+++ b/public/index.html
@@ -102,8 +102,7 @@
           <dl>
             <dt>Occupation:</dt>
             <dd>
-              Director, <a href="http://metanation.com">MetaNation</a><br>
-              Available for design, development, and marketing advice
+              Director, <a href="http://metanation.com">MetaNation</a>
             </dd>
           </dl>
           
